# yarrrclient

./: .gitignore  .gitmodules  CMakeLists.txt  compile  readme.md
doc/: publish
features/: dummy_graphics.feature  terminal.feature
features/step_definitions/: start.rb
features/support/: process_runner.rb
package/: PKGBUILD
share/: CMakeLists.txt
src/: CMakeLists.txt  authentication_token.cpp  authentication_token.hpp  cli.cpp  cli.hpp  colorizer.cpp  colorizer.hpp  fps.cpp  fps.hpp  hud.cpp  hud.hpp  information_window.cpp  information_window.hpp  keyboard_handler.cpp  keyboard_handler.hpp  list_window.cpp  list_window.hpp  local_event_dispatcher.hpp  login_handler.cpp  login_handler.hpp  main.cpp  mission_control.cpp  mission_control.hpp  mission_window.cpp  mission_window.hpp  network_service.cpp  network_service.hpp  particle_factory.cpp  particle_factory.hpp  postinst  resources.cpp  resources.hpp  sdl_engine.cpp  sdl_engine.hpp  services.cpp  stream_to_chat.cpp  stream_to_chat.hpp  terminal.cpp  terminal.hpp  text_token.cpp  (+9 more)
test/: CMakeLists.txt  test_cli.cpp  test_hud.cpp  test_information_window.cpp  test_list_window.cpp  test_login_handler.cpp  test_mission_control.cpp  test_mission_window.cpp  test_resources.cpp  test_runner.cpp  test_services.cpp  test_services.hpp  test_stream_to_chat.cpp  test_terminal.cpp  test_text_token.cpp  test_wakeup.cpp  test_window.cpp  test_world.cpp
